@@ -1,6 +1,6 @@
 # This testcase is part of GDB, the GNU debugger.
 
-# Copyright 2010-2012 Free Software Foundation, Inc.
+# Copyright 2010 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -27,8 +27,7 @@
 if {![istarget *-*-linux*]
     && ![istarget *-*-gnu*]
     && ![istarget *-*-elf*]
-    && ![istarget arm*-*-eabi*]
-    && ![istarget arm*-*-symbianelf*]
+    && ![istarget arm-*-eabi*]
     && ![istarget powerpc-*-eabi*]} {
     return 0
 }
